# sliding-window-min-max

./: README.md  pyproject.toml
.github/workflows/: python-package-validation.yml
src/sliding_window/: __init__.py  core.py  simple.py
tests/: test_core.py  test_simple.py
