[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sliding-window-min-max"
version = "0.1.0"
description = "A monotonic queue-based sliding window min/max library for Python."
readme = "README.md"
requires-python = ">=3.10"
license = "CC0-1.0"
keywords = ["algorithm", "deque", "maximum", "minimum", "monotonic-queue", "sliding-window"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
"Repository" = "https://github.com/luckyabsoluter/sliding-window-min-max"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
